src/styles/index.scss
@use './_variables.scss';

body {
  margin: 0;
  padding: 0;
  background-color: variables.$body-background-color;
  font-family: 'Roboto', sans-serif;
}

@mixin centralize {
  display: flex;
  justify-content: center;
  align-items: center;
}

.main-section {
  width: 100%;
  @include centralize;
  margin: 0 auto;
  overflow: hidden;
  flex-direction: column;
}

.main-inner-wrapper {
  width: 100%;
  // @include centralize;
  display: flex;
  // position: relative;
}

.mobile-options {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  margin-top: 50px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-color: red;
}

// Slider //
.slider-wrapper {
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: relative;
  align-items: center;
}

.slider-range {
  display: flex;
  width: 100%;
}

.slider-value {
  font-size: 12px;
  width: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  color: white;
  left: 90%;
  top: 8%;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.slider {
  /* removing default appearance */
  -webkit-appearance: none;
  appearance: none;
  /* creating a custom design */
  width: 100%;
  cursor: pointer;
  outline: none;
  cursor: grab;
  border: 1px solid rgb(20, 20, 20);
  /* border-radius: 2px; */
  /* slider progress trick */
  overflow: hidden;
  margin: 0;

  &:active {
    cursor: grabbing;
  }

  &:focus {
    outline: none;
  }

  /* Track: webkit browsers */
  &::-webkit-slider-runnable-track {
    height: 13px;
    background: #252525;
  }

  /* Track: Mozilla Firefox */
  &::-moz-range-track {
    height: 13px;
    background: #111;
  }

  /* Thumb: webkit */
  &::-webkit-slider-thumb {
    /* removing default appearance */
    -webkit-appearance: none;
    appearance: none;
    /* creating a custom design */
    height: 13px;
    width: 15px;
    background-color: #634cb8;
    border: 2px solid #634cb8;
    /* slider progress trick */
    box-shadow: -407px 0 0 400px #634cb8;
  }

  /* Thumb: Firefox */
  &::-moz-range-thumb {
    height: 13px;
    width: 15px;
    background-color: #634cb8;
    border: 1px solid #634cb8;
    /* slider progress trick */
    box-shadow: -407px 0 0 400px #634cb8;
  }
}

////////////scrollbar/////////////////
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #3a3737;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

//////////////////////////////////

@media screen and (max-width: 768px) {
  .main-section {
    margin-top: 30px;
  }
}

